--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,500;1,500&display=swap"
         rel="stylesheet">
+        <script src="https://kit.fontawesome.com/1d08c03931.js" crossorigin="anonymous"></script>
 
 </head>
 
@@ -37,7 +38,7 @@
 
 
                     <div id="down-buttons">
-                        <button class="button">Download CV</button>
+                        <button class="button"><i class="fa-solid fa-download"></i> Download CV</button>
                         <button class="button2">Content</button>
                     </div>
                 </div>
@@ -157,7 +158,7 @@
     </main>    
     
     <div class="resume-button">
-    <button class="button-primary">Download CV</button>
+    <button class="button-primary"><i class="fa-solid fa-download"></i> Download CV</button>
     </div>
     
     <!-- Contact section -->
